[tool.poetry]
name = "transfer learning experiments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
h5py = "^3.10.0"
imageio = "^2.31.5"
torchvision = "^0.16.0"
torchsummary = "^1.5.1"
matplotlib = "^3.8.0"
nibabel = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
